# support-agent

./: .eslintrc.json  .prettierrc  README.md  TODO.md  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
.wrangler/tmp/bundle-8w3PhD/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-Af0d0n/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-OgRZ2E/: middleware-loader.entry.ts
.wrangler/tmp/bundle-UmO1az/: middleware-loader.entry.ts
.wrangler/tmp/dev-DuKbhR/: test.js  test.js.map
.wrangler/tmp/dev-Qte70P/: test.js.map
.wrangler/tmp/dev-vfzlNz/: test.js  (+1 more)
.wrangler/types/: runtime.d.ts
src/: bindings.d.ts  index.ts  types.ts  worker.ts
src/api/: business.ts  setup.ts
src/channels/: chat.ts  email.ts  index.ts  slack.ts
src/db/: schema.sql
src/dev/: test.ts
src/handlers/: chat.ts  email.ts  index.ts  slack.ts
src/models/: schema.ts
src/queue/: consumer.ts  producer.ts  types.ts
src/queues/: consumer.ts  producer.ts  types.ts
src/services/: db.ts  rag.ts
src/tests/: chat_session.test.ts  queue.test.ts  rag.test.ts  setup.ts
src/types/: global.d.ts  workflow.ts
src/workflows/: knowledge.ts
support-agent/: pyproject.toml
support-agent/app/: main.py  schemas.py
support-agent/app/models/: models.py
support-agent/app/services/: database.py  rag.py
test/: setup.ts
test/api/: business.test.ts
test/integration/: queue-rag.test.ts
test/queues/: consumer.test.ts  producer.test.ts
(+12 files in other folders)
